tests/should-fail/flags/overflowing-fractional-part.j
//# +checknumberliterals
function test takes nothing returns nothing
    local real x = 0.0333333333
endfunction
